--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -97,9 +97,12 @@
             ],
             "styles": [
               "node_modules/ngx-toastr/toastr.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           }
         }
       }
