--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
+    "jspdf": "^2.5.1",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-print": "^1.2.1",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -31,6 +33,7 @@
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
