--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs-node": "^3.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "canvas": "^2.9.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-busboy": "^9.0.0",
+    "face-api.js": "^0.22.2",
     "googleapis": "^100.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
