--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,12 +18,15 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@types/socket.io-client": "^3.0.0",
     "bootstrap": "^5.1.3",
     "jspdf": "^2.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "ngx-print": "^1.2.1",
     "ngx-toastr": "^14.3.0",
+    "peerjs": "^1.4.7",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.5.4",
     "tslib": "^2.3.0",
     "webgazer": "^3.0.0",
     "zone.js": "~0.11.4"
@@ -35,6 +38,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^9.0.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
