--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -14,6 +14,7 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
