--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -39,12 +39,15 @@
     "@types/jspdf": "^2.0.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^9.0.0",
+    "autoprefixer": "^10.4.13",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "typescript": "~4.5.2"
   }
 }
