--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,6 +24,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "ngx-print": "^1.2.1",
     "ngx-toastr": "^14.3.0",
+    "ngx-webcam": "^0.4.1",
     "peerjs": "^1.4.7",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.5.4",
