--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,7 +19,13 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@types/socket.io-client": "^3.0.0",
+    "ag-grid-angular": "^29.0.0",
+    "ag-grid-community": "^29.0.0",
+    "angular-datatables": "^15.0.0",
     "bootstrap": "^5.1.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-bs5": "^1.11.3",
+    "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "ngx-print": "^1.2.1",
@@ -36,7 +42,9 @@
     "@angular-devkit/build-angular": "~13.2.5",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.9",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^9.0.0",
