--- a/server/package.json
+++ b/server/package.json
@@ -26,5 +26,8 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "socket.io": "^4.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
