--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@angular/animations": "^14.0.0",
     "materialize-css": "^1.0.0",
     "ngx-toastr": "^14.3.0",
+    "ngx-webcam": "^0.4.1",
     "socket.io-client": "^4.5.1",
     "webgazer": "^3.0.0"
   }
