--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -29,6 +29,7 @@
     "ngx-webcam": "^0.4.1",
     "peerjs": "^1.4.7",
     "rxjs": "~7.5.0",
+    "rxjs-etc": "^10.6.2",
     "socket.io-client": "^4.5.4",
     "tslib": "^2.3.0",
     "webgazer": "^3.0.0",
